[gd_scene load_steps=16 format=3 uid="uid://lnhvay53r0qh"]

[ext_resource type="Script" path="res://Main.gd" id="1_mk2k7"]
[ext_resource type="Script" path="res://View.gd" id="3_de5lh"]
[ext_resource type="Texture2D" uid="uid://b3kudbql6dl1y" path="res://images/club.png" id="3_fef0g"]
[ext_resource type="Texture2D" uid="uid://drqe3cs852u6i" path="res://images/club_mouse_over.png" id="4_7tg5b"]
[ext_resource type="Texture2D" uid="uid://dyygc4dbvjge2" path="res://images/diamond.png" id="5_av28g"]
[ext_resource type="Texture2D" uid="uid://dqpox6yhfj7wd" path="res://images/diamond_mouse_over.png" id="6_lu8sf"]
[ext_resource type="Texture2D" uid="uid://c5ftcp06a5dm2" path="res://images/heart.png" id="7_mixwk"]
[ext_resource type="Texture2D" uid="uid://kbplbmodlpis" path="res://images/heart_mouse_over.png" id="8_sk7ij"]
[ext_resource type="Texture2D" uid="uid://boq3vcr7w172q" path="res://images/spade.png" id="9_g57yf"]
[ext_resource type="Texture2D" uid="uid://8b82i3jl87mc" path="res://images/spade_mouse_over.png" id="10_8fh0a"]
[ext_resource type="Texture2D" uid="uid://dl8wtvx3xvwoe" path="res://images/circle.png" id="11_6kwdn"]
[ext_resource type="PackedScene" uid="uid://do8ahk1ggpbp7" path="res://outline.tscn" id="12_87ptn"]
[ext_resource type="Script" path="res://TrumpSuit.gd" id="13_e8e76"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_adiq0"]
bg_color = Color(0.784314, 0.784314, 0.784314, 0.784314)

[sub_resource type="Theme" id="Theme_ssv66"]
default_font_size = 24

[node name="Main" type="Node"]
script = ExtResource("1_mk2k7")

[node name="View" type="CanvasLayer" parent="."]
script = ExtResource("3_de5lh")

[node name="GUI" type="CanvasLayer" parent="View"]

[node name="Label" type="Label" parent="View/GUI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 405.0
offset_top = 477.0
offset_right = 500.0
offset_bottom = 500.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
text = "Hello, World"

[node name="StartButton" type="Button" parent="View/GUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -15.0
offset_right = 44.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="BidPanel" type="Panel" parent="View/GUI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = 104.0
offset_right = 202.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_adiq0")

[node name="Label" type="Label" parent="View/GUI/BidPanel"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
offset_left = 90.0
offset_top = 12.0
offset_right = 307.0
offset_bottom = 35.0
size_flags_vertical = 0
text = "Choose trump suit or Pass."

[node name="ClubButton" type="TextureButton" parent="View/GUI/BidPanel"]
layout_mode = 0
offset_left = 27.0
offset_top = 38.0
offset_right = 288.0
offset_bottom = 298.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("3_fef0g")
texture_hover = ExtResource("4_7tg5b")

[node name="DiamondButton" type="TextureButton" parent="View/GUI/BidPanel"]
layout_mode = 0
offset_left = 94.0
offset_top = 39.0
offset_right = 355.0
offset_bottom = 299.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("5_av28g")
texture_hover = ExtResource("6_lu8sf")

[node name="HeartButton" type="TextureButton" parent="View/GUI/BidPanel"]
layout_mode = 0
offset_left = 159.0
offset_top = 43.0
offset_right = 420.0
offset_bottom = 303.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("7_mixwk")
texture_hover = ExtResource("8_sk7ij")

[node name="SpadeButton" type="TextureButton" parent="View/GUI/BidPanel"]
layout_mode = 0
offset_left = 229.0
offset_top = 41.0
offset_right = 490.0
offset_bottom = 301.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("9_g57yf")
texture_hover = ExtResource("10_8fh0a")

[node name="PassButton" type="Button" parent="View/GUI/BidPanel"]
layout_mode = 0
offset_left = 317.0
offset_top = 43.0
offset_right = 379.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Pass"

[node name="DiscardPanel" type="Panel" parent="View/GUI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = 162.0
offset_right = 153.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_adiq0")

[node name="Label" type="Label" parent="View/GUI/DiscardPanel"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
offset_left = 20.0
offset_top = 26.0
offset_right = 200.0
offset_bottom = 49.0
size_flags_vertical = 0
text = "Discard 2 cards to nest."

[node name="DoneButton" type="Button" parent="View/GUI/DiscardPanel"]
layout_mode = 0
offset_left = 220.0
offset_top = 14.0
offset_right = 282.0
offset_bottom = 61.0
size_flags_horizontal = 8
size_flags_vertical = 8
disabled = true
text = "Done"

[node name="PlayPanel" type="Panel" parent="View/GUI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = 163.0
offset_right = 86.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_adiq0")

[node name="Label" type="Label" parent="View/GUI/PlayPanel"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
offset_left = 20.0
offset_top = 26.0
offset_right = 140.0
offset_bottom = 49.0
size_flags_vertical = 0
text = "Play a card"
horizontal_alignment = 1

[node name="DiscardOutline1" parent="View/GUI" instance=ExtResource("12_87ptn")]
visible = false
position = Vector2(430, 500)

[node name="DiscardOutline2" parent="View/GUI" instance=ExtResource("12_87ptn")]
visible = false
position = Vector2(570, 500)

[node name="ActivePlayer" type="Sprite2D" parent="View/GUI"]
visible = false
modulate = Color(0.784314, 0.784314, 0.784314, 1)
position = Vector2(500, 959)
scale = Vector2(0.25, 0.25)
texture = ExtResource("11_6kwdn")

[node name="TrumpSuit" type="Sprite2D" parent="View/GUI"]
z_index = -1
z_as_relative = false
position = Vector2(500, 500)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_mixwk")
script = ExtResource("13_e8e76")

[node name="PlayOutline" parent="View/GUI" instance=ExtResource("12_87ptn")]
visible = false
position = Vector2(500, 640)

[node name="Score" type="Control" parent="View/GUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 712.0
offset_top = 36.0
offset_right = 752.0
offset_bottom = 76.0
theme = SubResource("Theme_ssv66")

[node name="HBoxContainer" type="HBoxContainer" parent="View/GUI/Score"]
layout_mode = 0
offset_right = 182.0
offset_bottom = 50.0

[node name="Labels" type="VBoxContainer" parent="View/GUI/Score/HBoxContainer"]
layout_mode = 2

[node name="Labels" type="Label" parent="View/GUI/Score/HBoxContainer/Labels"]
layout_mode = 2
text = "
Hand
Total"

[node name="WeColumn" type="VBoxContainer" parent="View/GUI/Score/HBoxContainer"]
custom_minimum_size = Vector2(90, 2.08165e-12)
layout_mode = 2

[node name="WeLabel" type="Label" parent="View/GUI/Score/HBoxContainer/WeColumn"]
layout_mode = 2
text = "We"
horizontal_alignment = 2

[node name="HandPoints" type="Label" parent="View/GUI/Score/HBoxContainer/WeColumn"]
layout_mode = 2
text = "0
"
horizontal_alignment = 2

[node name="TotalPoints" type="Label" parent="View/GUI/Score/HBoxContainer/WeColumn"]
layout_mode = 2
text = "0
"
horizontal_alignment = 2

[node name="TheyColumn" type="VBoxContainer" parent="View/GUI/Score/HBoxContainer"]
custom_minimum_size = Vector2(90, 2.08165e-12)
layout_mode = 2

[node name="TheyLabel" type="Label" parent="View/GUI/Score/HBoxContainer/TheyColumn"]
layout_mode = 2
text = "They"
horizontal_alignment = 2

[node name="HandPoints" type="Label" parent="View/GUI/Score/HBoxContainer/TheyColumn"]
layout_mode = 2
text = "0
"
horizontal_alignment = 2

[node name="TotalPoints" type="Label" parent="View/GUI/Score/HBoxContainer/TheyColumn"]
layout_mode = 2
text = "0
"
horizontal_alignment = 2

[node name="Cards" type="CanvasLayer" parent="View"]

[connection signal="pressed" from="View/GUI/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="View/GUI/BidPanel/ClubButton" to="View" method="_on_bid_button_pressed" binds= [0]]
[connection signal="pressed" from="View/GUI/BidPanel/DiamondButton" to="View" method="_on_bid_button_pressed" binds= [1]]
[connection signal="pressed" from="View/GUI/BidPanel/HeartButton" to="View" method="_on_bid_button_pressed" binds= [2]]
[connection signal="pressed" from="View/GUI/BidPanel/SpadeButton" to="View" method="_on_bid_button_pressed" binds= [3]]
[connection signal="pressed" from="View/GUI/BidPanel/PassButton" to="View" method="_on_bid_button_pressed" binds= [5]]
[connection signal="pressed" from="View/GUI/DiscardPanel/DoneButton" to="." method="_on_done_button_pressed"]
